--- a/talnet/appsettings.json
+++ b/talnet/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "telnetConnection": "Server=DESKTOP-170SV6V;Database=telnet;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "telnetConnection": ""
   }
 }
